# codeindex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  analyze_repo.py  orchid-viz.html  pyproject.toml  repo-viz-explorer.html  repo_graph.json
analyzers/: monorepo_analyzer.py
codeindex/: __init__.py  analyze.py  cli.py  hook.py  impact.py  index.py  mcp_server.py  reporter.py  symbols.py  viz_server.py
codeindex/analyzers/: cross_lang_analyzer.py  go_analyzer.py  java_analyzer.py  js_analyzer.py  php_analyzer.py  python_analyzer.py  ruby_analyzer.py  rust_analyzer.py
codeindex/semantic/: search.py
codeindex/store/: __init__.py  db.py
docs/: evaluation-prompt.md
tests/: test_phase1.py
tests/fixtures/simple_python/: main.py  models.py  utils.py
viz/: explorer.html
